--- a/sample/package.json
+++ b/sample/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -15,7 +15,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@storybook/preset-typescript": "^3.0.0",
     "@types/styled-components": "^5.1.25",
+    "babel-plugin-react-require": "^3.1.3",
+    "babel-preset-react-app": "^10.0.1",
+    "css-loader": "^6.7.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
