--- a/sample/package.json
+++ b/sample/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.7.0",
     "@storybook/preset-typescript": "^3.0.0",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "babel-plugin-react-require": "^3.1.3",
     "babel-preset-react-app": "^10.0.1",
     "css-loader": "^6.7.1",
